--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vimeo-regex",
-  "description": "The correct vimeo video id regex!",
+  "description": "The correct vimeo video id regex",
   "version": "0.0.1",
   "scripts": {
     "test": "npm install && node_modules/.bin/mocha",
@@ -33,10 +33,10 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "coveralls": "^2.11.2",
-    "istanbul": "^0.3.2",
-    "mocha": "^2.0.1",
-    "mocha-lcov-reporter": "0.0.1"
+    "coveralls": "^2.11.3",
+    "istanbul": "^0.3.17",
+    "mocha": "^2.2.5",
+    "mocha-lcov-reporter": "0.0.2"
   },
   "engines": {
     "node": ">= 0.10.33",
